# Slop-Package-manager

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_REVIEW.md  CONTRIBUTING.md  CONTRIBUTOR_LADDER.md  Cargo.toml  EXAMPLES.md  LICENSE  MAINTAINERS.md  README.md  SECURITY.md  USAGE.md  flake.nix  rustfmt.toml  shell.nix
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json  devcontainer.local.json  post-create.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation_improvement.md  package_alias_request.md  roadmap_vote.md
.github/workflows/: ci.yml  release.yml
completions/: slop.bash  slop.fish  slop.zsh
examples/: configuration-examples.md  configuration.nix  developer-configuration.nix  flake.nix
src/: ai_bundles.rs  ai_conflicts.rs  ai_context.rs  ai_hardware.rs  ai_health.rs  ai_interpreter.rs  ai_memory.rs  ai_optimizer.rs  ai_search.rs  ai_wizard.rs  cli.rs  flake_manager.rs  lib.rs  main.rs  nix_config.rs  package_resolver.rs  rebuild.rs
tests/: integration_test.rs  integration_tests.rs
