[package]
name = "slop"
version = "0.1.0"
edition = "2021"
description = "AI-powered package manager for NixOS"
authors = ["Slop Team"]
license = "MIT"

[dependencies]
# CLI parsing
clap = { version = "4.4", features = ["derive"] }
clap_complete = "4.4"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# HTTP client for AI API and package search
reqwest = { version = "0.11", features = ["json", "blocking"] }

# JSON serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# File operations
tempfile = "3.9"
fs_extra = "1.3"

# Diff and pretty printing
similar = "2.4"
colored = "2.1"

# Interactive prompts
dialoguer = "0.10"

# Regex for Nix parsing
regex = "1.10"

# Home directory
dirs = "5.0"

[dev-dependencies]
tempfile = "3.9"
